# common-packer

./: .gitignore  .gitlab-ci.yml  .start.sh  .update.sh  LICENSE  README.md  Taskfile.yml  Vagrantfile-reference  Vagrantfile-reference2  common.desktop.json  common.server.json  package-lock.json  package.desktop.json.handlebars  package.json  package.server.json.handlebars  pnpm-lock.yaml  pyproject.toml  requirements.desktop.txt  update.sh  variables.desktop.json  variables.server.json
.common/: package.hbs.json
.common-desktop/: package.hbs.json
.common-desktop/.config/: variables.json
.common-server/: package.hbs.json
.common-server/.config/: variables.json
.common/.config/: variables.json
.common/.config/docs/: Taskfile.yml  blueprint-readme.md  package-lock.json  package.json  pyproject.toml  variables.json
.common/.config/docs/contributing/: code-of-conduct.md
.common/.config/docs/readme/: license.md
.config/: eslintcache  package-lock.json
.config/docs/: Taskfile.yml  common.json  package.json  (+2 more)
common/: package.json  pyproject.toml
docs/: blueprint-contributing.md  common.json  variables.json
files/: .gitignore  .gitlab-ci.yml  Vagrantfile  Vagrantfile.handlebars  package.json
files-*/: Vagrantfile  common.json  package.json  requirements.txt
files-desktop/: .gitlab-ci.yml  .start.sh  Taskfile.yml  Vagrantfile.handlebars  package.json.handlebars  requirements.txt
files-server/: .start.sh  Taskfile.yml  Vagrantfile.handlebars  package.json.handlebars  requirements.txt
local/: package-lock.json
project/: .gitlab-ci.yml  package.hbs.json  package.json.liquid  pyproject.hbs.toml  pyproject.toml.liquid
project-desktop/: package.hbs.json  package.json.liquid
project-server/: package.hbs.json  package.json.liquid
taskfiles/: Taskfile-ansible.yml.handlebars  Taskfile-build.yml.handlebars  Taskfile-common.yml.handlebars  Taskfile-darwin.yml.handlebars  Taskfile-fix.yml.handlebars  Taskfile-lint.yml.handlebars  Taskfile-npm.yml.handlebars  Taskfile-packer.yml.handlebars  Taskfile-security.yml.handlebars  Taskfile-test.yml.handlebars
taskfiles-desktop/: Taskfile-ansible.yml  Taskfile-build.yml  Taskfile-common.yml  Taskfile-darwin.yml  Taskfile-fix.yml  Taskfile-image.yml  Taskfile-lint.yml  Taskfile-linux.yml  Taskfile-npm.yml  Taskfile-security.yml
taskfiles-server/: Taskfile-ansible.yml  Taskfile-build.yml  Taskfile-common.yml  Taskfile-darwin.yml  Taskfile-fix.yml  Taskfile-image.yml  Taskfile-lint.yml  Taskfile-linux.yml  Taskfile-npm.yml
(+956 files in other folders)
