[tool.poetry]
name = "common-packer"
version = "0.0.1"
description = "Repository that hosts common files for Packer projects"
authors = ["Brian Zalewski <brian@megabyte.space>"]
license = "MIT"
readme = "README.md"
homepage = "https://megabyte.space"
documentation = "https://megabyte.space/docs/common/packer"
keywords = ["common", "files", "image", "kvm", "megabytelabs", "npm", "package", "packer", "parallels", "professormanhattan", "shared", "virtualbox", "vm", "vmware"]
include = ["CHANGELOG.md", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0.0"

[tool.poetry.dev-dependencies]
blocklint = "^0.2.3"
pre-commit-hooks = "^4.0.1"
proselint = "^0.12.0"
yamllint = "^1.26.3"

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/megabyte-labs/common/packer/-/issues"
"GitHub" = "https://github.com/ProfessorManhattan/common-packer"
"GitLab" = "https://gitlab.com/megabyte-labs/common/packer"
"Open Collective" = "https://opencollective.com/megabytelabs"
"Patreon" = "https://www.patreon.com/ProfessorManhattan"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
