[tool.poetry]
name = "docs-packer"
version = "0.0.1"
description = "Documentation partials used to generate documentation for Packer projects"
authors = ["Brian Zalewski <brian@megabyte.space>"]
license = "MIT"
readme = "README.md"
homepage = "https://megabyte.space"
documentation = "https://megabyte.space/docs/documentation/packer"
keywords = ["common", "docs", "documentation", "hyper-v", "kvm", "machine-images", "megabytelabs", "npm", "package", "packer", "parallels", "partials", "professormanhattan", "shared", "templates", "vagrant", "virtual-machine", "virtualbox", "vms", "vmware"]
include = ["CHANGELOG.md", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0.0"

[tool.poetry.dev-dependencies]
blocklint = "^0.2.3"
pre-commit-hooks = "^4.0.1"
proselint = "^0.12.0"
yamllint = "^1.26.3"

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/megabyte-labs/documentation/packer/-/issues"
"GitHub" = "https://github.com/ProfessorManhattan/docs-packer"
"GitLab" = "https://gitlab.com/megabyte-labs/documentation/packer"
"Open Collective" = "https://opencollective.com/megabytelabs"
"Patreon" = "https://www.patreon.com/ProfessorManhattan"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
